Change start_url to '/auth/voter' in manifest.json

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Wevoting",
     "short_name": "Wevoting",
-    "start_url": "/",
+    "start_url": "/auth/voter",
     "scope": "/",
     "display": "standalone",
     "background_color": "#FAFAFA",
